[gd_scene load_steps=3 format=3 uid="uid://dykiajohmtf56"]

[ext_resource type="Script" path="res://menus/recipe_book/recipe_book_variant_button.gd" id="1_lnngo"]
[ext_resource type="Texture2D" uid="uid://cvmk88s6vodej" path="res://recipes/Cake_Lemon.png" id="1_w6gbt"]

[node name="VariantButton" type="Button"]
custom_minimum_size = Vector2(310, 120)
offset_right = 310.0
offset_bottom = 120.0
script = ExtResource("1_lnngo")

[node name="FoodTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 15.0
offset_right = 114.0
offset_bottom = 99.0
texture = ExtResource("1_w6gbt")
expand_mode = 1

[node name="VariantName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -1.0
offset_top = 87.0
offset_right = 139.0
offset_bottom = 111.0
text = "Cinnamon Roll"
horizontal_alignment = 1

[node name="RequiresLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 141.0
offset_top = 12.0
offset_right = 306.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 14
text = "requires
"
horizontal_alignment = 1

[node name="RequirementName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 139.0
offset_top = 28.0
offset_right = 308.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 20
text = "Peanut Butter
"
horizontal_alignment = 1

[node name="QuantityRequirement" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 152.0
offset_top = 60.0
offset_right = 296.0
offset_bottom = 109.0
theme_override_font_sizes/font_size = 33
text = "9999/3"
horizontal_alignment = 1
